# ocrd_froc

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  ocrd-tool.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docker.yml
ocrd_froc/: charmap.json  classmap.py  converter.py  font_map.json  froc.py  network.py  ocrd-tool.json  processor.py
ocrd_froc/cli/: ocrd_cli.py
src/ocrd_froc/: classmap.py  converter.py  font_map.json  froc.py  ocrd-tool.json  processor.py
tests/: conftest.py  test_ocrd.py
